--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "firebase": "^6.3.1",
+    "firebase": "^8.2.4",
     "firebase-admin": "^8.2.0",
     "firebaseui": "^4.1.0",
     "http2": "^3.3.7",
@@ -29,7 +29,7 @@
     "@vue/cli-plugin-e2e-cypress": "^3.9.0",
     "@vue/cli-plugin-eslint": "^3.9.0",
     "@vue/cli-plugin-unit-mocha": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
+    "@vue/cli-service": "^3.12.1",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
@@ -38,5 +38,9 @@
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "7.x"
   }
 }
